Fix error passing by random value
replace CLUSTER_DNS_IP via real IP 10.96.0.10 address

--- a/deployments/coredns.yaml
+++ b/deployments/coredns.yaml
@@ -178,7 +178,7 @@ metadata:
 spec:
   selector:
     k8s-app: kube-dns
-  clusterIP: CLUSTER_DNS_IP
+  clusterIP: 10.96.0.10
   ports:
   - name: dns
     port: 53
